# koma-ext-workflow

./: .gitignore  Cargo.toml  dev-install.sh  manifest.json  pack.sh  rust_out
.cargo/: config.toml
.github/workflows/: release.yml
crates/office-core/: Cargo.toml
crates/office-core/src/: digest.rs  digest_test.rs  domain.rs  domain_test.rs  graph.rs  graph_test.rs  inboxmsg.rs  inboxmsg_test.rs  kernel.rs  kernel_test.rs  lib.rs  machine.rs  machine_test.rs  office.rs  office_test.rs  persona.rs  persona_test.rs  prompts.rs  prompts_test.rs  report.rs  report_test.rs
crates/office-daemon/: Cargo.toml
crates/office-daemon/src/: driver.rs  driver_test.rs  git.rs  git_test.rs  handlers.rs  handlers_test.rs  host.rs  host_test.rs  inbox.rs  inbox_test.rs  main.rs
crates/office-store/: Cargo.toml
crates/office-store/src/: lease.rs  lease_test.rs  lib.rs  store.rs  store_test.rs
crates/workflow-mcp/: Cargo.toml
crates/workflow-mcp/src/: main.rs  server.rs  status.rs  status_test.rs  write.rs  write_test.rs
docs/: ARCHITECTURE.md  BUILD_WAVES.md  DEV.md  PANEL_PROTOCOL.md
poc/office/: gen_sprites.py  index.html
ui/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
ui/public/: koma-panel.js
ui/sprites-gen/: gen_sprites.py
ui/src/: App.test.tsx  App.tsx  bridge.test.ts  bridge.ts  index.css  main.tsx  mock.ts  store.test.ts  store.ts  theme.test.ts  theme.ts  tokens.css  vite-env.d.ts
ui/src/components/: Card.tsx  Comments.test.ts  Comments.tsx  ConfirmButton.tsx  DepMap.test.ts  DepMap.tsx
ui/src/lib/: designStages.test.ts  designStages.ts  docCards.test.ts  docCards.ts  officeLayout.test.ts  officeLayout.ts
ui/src/views/: Board.test.ts  Board.tsx  Dashboard.test.tsx  Dashboard.tsx  Drilldown.test.ts  Drilldown.tsx  OfficeChat.test.ts  OfficeChat.tsx  OfficeMap.test.tsx  OfficeMap.tsx  Prd.test.ts  Prd.tsx  Settings.test.ts  Settings.tsx  TaskDetail.tsx  TraceLog.test.ts  TraceLog.tsx
