[package]
name = "office-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "office-daemon"
path = "src/main.rs"

[dependencies]
office-core = { path = "../office-core" }
office-store = { path = "../office-store" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
koma-extension = { git = "https://github.com/aula-id/koma.git", branch = "main" }

[dev-dependencies]
tempfile = "3"
